feat: gitlab to markdown

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # GitLab API Configuration
 GITLAB_PRIVATE_TOKEN=your_gitlab_private_token
 MD_PROJECT_SOURCE_FILE=/home/nicolas/Data/TaskManagement/EL/ToGitlab.md
+MD_PROJECT_TARGET_FILE=/home/nicolas/Data/TaskManagement/EL/FromGitlab.md
